Fixed modal/backdrop z-index.

--- a/frontend/app/less/paperwork-themes/paperwork-v1/paperwork-v1-custom.less
+++ b/frontend/app/less/paperwork-themes/paperwork-v1/paperwork-v1-custom.less
@@ -603,6 +603,14 @@ body.paperwork-guest {
  * Bootstrap foo
  */
 
+ .modal-backdrop {
+    z-index: 9998;
+ }
+
+ .modal {
+    z-index: 9999;
+ }
+
 .form-control {
 	.box-shadow(0);
 }
